kube/alrest/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
spec:
  replicas: 1
  serviceName: uptime-kuma-service
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      volumes:
        - name: kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma
        - name: oauth2-proxy
          secret:
            secretName: uptime-kuma-oauth2-proxy
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1
          imagePullPolicy: Always
          ports:
            - name: uptime-kuma
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: kuma-data
              mountPath: /app/data
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          args:
            - --config=/xe/cfg/oauth2-proxy.cfg
          resources:
            limits:
              cpu: "250m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: oauth2-proxy
              mountPath: /xe/cfg
