kube/alrest/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
  - name: http
    port: 80
    targetPort: 4180
  - name: backend
    port: 3001
