kube/alrest/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - status.xeserv.us
    secretName: status-xeserv-us-tls
  rules:
  - host: status.xeserv.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 80
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
